[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

# Package metadata
# ----------------

[tool.poetry]
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
classifiers = []
description = ""
keywords = []
license = "MIT"
name = "kraken-build"
packages = [
  {include = "kraken/common", from = "src"},
  {include = "kraken/core", from = "src"},
  {include = "kraken/std", from = "src"},
  {include = "kraken/wrapper", from = "src"},
]
readme = "README.md"
version = "0.32.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kraken-build/kraken-build/issues"
Documentation = "https://kraken-build.github.io/kraken-build/"
Homepage = "https://kraken-build.github.io/kraken-build/"
Repository = "https://github.com/kraken-build/kraken-build/"

[tool.poetry.scripts]
kraken = "kraken.core.cli.main:main"
krakenw = "kraken.wrapper.main:main"

[tool.poetry.plugins."pytest11"]
"kraken.core.testing" = "kraken.core.testing"

# Dependencies
# ------------

[tool.poetry.dependencies]
builddsl = "^1.0.0"
databind-json = "^4.2.5"
dataclasses = {version = "^0.6", python = "<3.7"}
deprecated = "^1.2.13"
dill = ">=0.3.5,<0.3.6" # Waiting for Dill 0.3.7 for 3.11 compatibiltiy, see https://github.com/uqfoundation/dill/issues/332
httpx = "^0.23.0"
keyring = "^23.8.2"
mitmproxy = "^9.0.1"
networkx = "^3.1"
nr-io-graphviz = "^0.1.1"
nr-stream = "^1.1.0"
packaging = "^23.1"
pex = "^2.1.103"
python = ">=3.10,<3.11" # ">=3.10,<4.0" | Can't use 3.11+ because Dill 0.3.8 is not released yet
rich = "^13.4.2"
termcolor = "^1.1.0"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
twine = "^4.0.1"
typeapi = "^1.4.3"
typing-extensions = ">=4.6.0"

# # NOTE(@NiklasRosenstein): Need to pin transitive dependency markdown-it under 3.0 because it dropped Python 3.9
# #       support after that version. Technically this shouldn't be a big issue for runtime, but Mypy checks site
# #       packages and complains about the walrus operator used in it when it checks site-packages.
# #       See also https://github.com/python/mypy/issues/12162
# markdown-it-py = "<3.0.0"

[tool.poetry.dev-dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
localimport = "^1.7.6"
mypy = "^1.6.1"
pyartifactory = "^1.10.0"
pycln = "^2.1.3"
pylint = "^3.0.2"
pytest = ">=6.0.0"
pyupgrade = "^3.15.0"
types-Deprecated = "^1.2.9"
types-requests = "^2.28.0"
types-termcolor = "^1.1.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
novella = "0.2.3"
pydoc-markdown = "^4.6.0"

# Slap configuration
# ------------------

[tool.slap]
typed = true

[tool.slap.test]
black = "black --check src/ tests/"
check = "slap check"
flake8 = "flake8 src/ tests/"
isort = "isort --check-only src/ tests/"
mypy = "dmypy run src/"
pytest = "pytest tests/ -vv"

[tool.slap.run]
fmt = "black src/ tests/ && isort src/ tests/ && pycln src/ tests/"

# Linter/Formatter configuration
# ------------------------------

[tool.mypy]
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
python_version = "3.10"
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pex.*"

[[tool.mypy.overrides]]
ignore_errors = true
ignore_missing_imports = true
module = "networkx.*"

[tool.isort]
combine_as_imports = true
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
  "integration",
]
