[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

# Package metadata
# ----------------

[tool.poetry]
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
classifiers = []
description = ""
keywords = []
license = "MIT"
name = "kraken-build"
packages = [
  {include = "kraken/build", from = "src"},
  {include = "kraken/common", from = "src"},
  {include = "kraken/core", from = "src"},
  {include = "kraken/std", from = "src"},
]
readme = "README.md"
version = "0.33.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kraken-build/kraken-build/issues"
Documentation = "https://kraken-build.github.io/kraken-build/"
Homepage = "https://kraken-build.github.io/kraken-build/"
Repository = "https://github.com/kraken-build/kraken-build/"

[tool.poetry.scripts]
kraken = "kraken.core.cli.main:main"

[tool.poetry.plugins."pytest11"]
"kraken.core.testing" = "kraken.core.testing"

# Dependencies
# ------------

[tool.poetry.dependencies]
builddsl = "^1.0.0"
databind-json = "^4.2.5"
dataclasses = {version = "^0.6", python = "<3.7"}
deprecated = "^1.2.13"
dill = ">=0.3.8,<0.4.0"
httpx = "^0.26.0"
keyring = "^24.0.0"
mitmproxy = "^10.0.0"
networkx = "^3.1"
nr-io-graphviz = "^0.1.1"
nr-stream = "^1.1.0"
packaging = "^23.1"
pex = "^2.1.156"
python = ">=3.10"
rich = "^13.4.2"
termcolor = "^1.1.0"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
typeapi = "^1.4.3"
typing-extensions = ">=4.6.0"

[tool.poetry.dev-dependencies]
localimport = "^1.7.6"
pyartifactory = "^1.10.0"
pytest = ">=6.0.0"
types-Deprecated = "^1.2.9"
types-requests = "^2.28.0"
types-termcolor = "^1.1.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
novella = "0.2.6"
pydoc-markdown = "^4.6.0"

# Slap configuration
# ------------------

[tool.slap]
typed = true

# Linter/Formatter configuration
# ------------------------------

[tool.mypy]
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
python_version = "3.10"
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
ignore_missing_imports = true
module = "networkx.*"

[tool.isort]
combine_as_imports = true
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
  "integration",
]
