[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
classifiers = []
description = ""
keywords = []
license = "MIT"
name = "kraken-core"
packages = [{include = "kraken/core", from = "src"}]
readme = "README.md"
version = "0.31.7"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kraken-build/kraken-build/issues"
Documentation = "https://kraken-build.github.io/kraken-build/"
Homepage = "https://kraken-build.github.io/kraken-build/"
Repository = "https://github.com/kraken-build/kraken-build/"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
deprecated = "^1.2.13"
dill = ">=0.3.5,<0.3.6"  # Waiting for Dill 0.3.7 for 3.11 compatibiltiy, see https://github.com/uqfoundation/dill/issues/332
kraken-common = "^0.31.7"
networkx = "^3.1"
nr-io-graphviz = "^0.1.1"
nr-stream = "^1.1.0"
setuptools = ">=33.1.0"
termcolor = "^1.1.0"
typeapi = "^1.4.3"
typing-extensions = ">=3.10.0.2"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
types-Deprecated = "^1.2.9"
types-setuptools = "^57.4.18"
types-termcolor = "^1.1.5"
pycln = "^2.1.3"

# For the testing fixture provided by kraken.core.testing
localimport = "^1.7.6"
[tool.poetry.group.pytest]
optional = true
[tool.poetry.group.pytest.dependencies]
pytest = ">=6.0.0"

[tool.poetry.plugins."pytest11"]
"kraken.core.testing" = "kraken.core.testing"

[tool.poetry.scripts]
kraken = "kraken.core.cli.main:main"

[tool.slap]
typed = true

[tool.slap.test]
black = "black --check src/ tests/"
check = "slap check"
flake8 = "flake8 src/ tests/"
isort = "isort --check-only src/ tests/"
pycln = "pycln src/ tests/ --check"
mypy = "dmypy run src/ tests/"
pytest = "pytest src/ tests/ -vv"

[tool.slap.run]
fmt = "black src/ tests/ && isort src/ tests/ && pycln src/ tests/"

[tool.mypy]
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
python_version = "3.10"
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
ignore_missing_imports = true
module = "networkx.*"

[tool.isort]
combine_as_imports = true
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "integration",
]
