[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kraken-wrapper"
version = "0.33.2"
description = ""
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  {include = "kraken/wrapper", from = "src"},
]
classifiers = []
keywords = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kraken-build/kraken-build/issues"
Documentation = "https://kraken-build.github.io/kraken-build/"
Homepage = "https://kraken-build.github.io/kraken-build/"
Repository = "https://github.com/kraken-build/kraken-build/"

[tool.poetry.dependencies]
kraken-build = "0.33.2"
packaging = "^23.1"
python = ">=3.10"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pycln = "^2.1.3"
pylint = "^3.0.2"
pytest = ">=6.0.0"
pyupgrade = "^3.15.0"

[tool.poetry.scripts]
krakenw = "kraken.wrapper.main:main"

[tool.slap]
typed = true

# Linter/Formatter configuration
# ------------------------------

[tool.mypy]
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
python_version = "3.10"
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
combine_as_imports = true
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
  "integration",
]
