[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kraken-wrapper"
version = "0.35.7"
description = ""
authors = [
    "Niklas Rosenstein <rosensteinniklas@gmail.com>",
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "kraken/wrapper", from = "src" },
]
classifiers = []
keywords = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kraken-build/kraken-build/issues"
Documentation = "https://kraken-build.github.io/kraken-build/"
Homepage = "https://kraken-build.github.io/kraken-build/"
Repository = "https://github.com/kraken-build/kraken-build/"

[tool.poetry.dependencies]
kraken-build = "0.35.7"
packaging = "^23.1"
python = ">=3.10"
termcolor = "^1.1.0"
uv = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.0.0"

[tool.poetry.scripts]
krakenw = "kraken.wrapper.main:main"

[tool.slap]
typed = true

[tool.pytest.ini_options]
markers = [
  "integration",
]
