[tool.poetry]
name = "lint-enforced-directories-project"
version = "0.1.0"
description = ""
authors = ["Josh Cowling <josh.cowling@helsing.ai>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pycln = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
