[project]
name = "pdm-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Simone Zandara", email = "simone.zandara@helsing.ai"},
]
dependencies = [
    "pytest",
    "pytest-cov",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.metadata]
allow-direct-references = true
