[project]
name = "pdm-project-consumer"
version = "0.1.0"
description = ""
authors = [
    {name = "Simone Zandara", email = "simone.zandara@helsing.ai"},
]
dependencies = [
    "pdm-project"
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.pdm.source]]
url = "http://localhost:23213"
verify_ssl = false
name = "local"
username = "integration-test-user"
password = "password-for-integration-test"
