[project]
name = "pdm-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Simone Zandara", email = "simone.zandara@helsing.ai"},
]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "black",
    "flake8",
    "isort",
    "mypy <1",
    "codespell",
]
requires-python = ">=3.9,<3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.metadata]
allow-direct-references = true



